--- a/xaringanPresentationTemplate.Rmd
+++ b/xaringanPresentationTemplate.Rmd
@@ -5,12 +5,16 @@ author: "Yihui Xie"
 date: "2016/12/12 (updated: `r Sys.Date()`)"
 output:
   xaringan::moon_reader:
+    # css: [default, metropolis, metropolis-fonts]
+    # yolo: true
     lib_dir: libs
     nature:
       highlightStyle: github
       highlightLines: true
       countIncrementalSlides: false
+      # autoplay: 3000
 ---
+
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
